--- a/src/main/resources/PlayerEntry.fxml
+++ b/src/main/resources/PlayerEntry.fxml
@@ -40,12 +40,12 @@
                 <Font name="System Bold" size="18.0" />
             </font>
         </Text>
-        <Text fill="WHITE" layoutX="627.0" layoutY="356.0" strokeType="OUTSIDE" strokeWidth="0.0" text="V">
+        <Text fill="WHITE" layoutX="624.0" layoutY="486.0" strokeType="OUTSIDE" strokeWidth="0.0" text="V">
             <font>
                 <Font name="System Bold Italic" size="69.0" />
             </font>
         </Text>
-        <Text fill="WHITE" layoutX="675.0" layoutY="394.0" strokeType="OUTSIDE" strokeWidth="0.0" text="S">
+        <Text fill="WHITE" layoutX="674.0" layoutY="532.0" strokeType="OUTSIDE" strokeWidth="0.0" text="S">
             <font>
                 <Font name="System Bold Italic" size="69.0" />
             </font>
@@ -65,7 +65,7 @@
                 <Font name="System Italic" size="45.0" />
             </font>
         </Text>
-      <TextField fx:id="playerNameField" layoutX="601.0" layoutY="159.0" onAction="#handleAddPlayer" promptText="Type Player Name" />
+      <TextField fx:id="playerIDField" layoutX="601.0" layoutY="159.0" onAction="#handleAddPlayer" promptText="Enter your two-digit ID" />
       <TableView fx:id="blueTeamTableView" layoutX="161.0" layoutY="142.0" prefHeight="484.0" prefWidth="409.0">
         <columns>
           <TableColumn fx:id="blueIdColumn" prefWidth="75.0" text="ID" />
@@ -87,6 +87,10 @@
         </items>
       </ChoiceBox>
       <Button fx:id="resetButton" layoutX="647.0" layoutY="626.0" mnemonicParsing="false" onAction="#handleResetButton" text="Reset" />
+      <TextField fx:id="firstNameField" layoutX="601.0" layoutY="193.0" onAction="#handleAddFirstName" promptText="Enter Your First Name" />
+      <TextField fx:id="lastNameField" layoutX="601.0" layoutY="224.0" />
+      <TextField fx:id="codeNameField" layoutX="601.0" layoutY="257.0" />
+      <TextField fx:id="equipCodeField" layoutX="601.0" layoutY="300.0" />
 
     </children>
 </AnchorPane>
