--- a/src/main/resources/PlayerEntry.fxml
+++ b/src/main/resources/PlayerEntry.fxml
@@ -14,13 +14,13 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" style="-fx-background-color: Black;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.teammain.MainController">
     <children>
-        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="550.0" layoutX="143.0" layoutY="105.0" stroke="BLACK" strokeType="INSIDE" width="445.0" />
+        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#26bc15" height="550.0" layoutX="143.0" layoutY="105.0" stroke="BLACK" strokeType="INSIDE" width="445.0" />
         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ff361f" height="550.0" layoutX="759.0" layoutY="105.0" stroke="BLACK" strokeType="INSIDE" width="445.0" />
-        <Text fill="WHITE" layoutX="519.0" layoutY="60.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Player Entry Screen" wrappingWidth="312.13671875">
+        <Text fill="WHITE" layoutX="519.0" layoutY="60.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Player Entry Screen" textAlignment="CENTER" wrappingWidth="312.13671875">
          <font>
             <Font size="32.0" />
          </font></Text>
-        <Text fill="#492dff" layoutX="254.0" layoutY="83.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Blue Team" textAlignment="CENTER" wrappingWidth="223.13671875">
+        <Text fill="#26bc15" layoutX="254.0" layoutY="83.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Green Team" textAlignment="CENTER" wrappingWidth="223.13671875">
             <font>
                 <Font name="System Bold Italic" size="38.0" />
             </font>
@@ -30,12 +30,7 @@
                 <Font name="System Bold Italic" size="38.0" />
             </font>
         </Text>
-        <Text fill="WHITE" layoutX="99.0" layoutY="698.0" strokeType="OUTSIDE" strokeWidth="0.0" text="F1 to Edit Game" underline="true" wrappingWidth="147.1328125">
-            <font>
-                <Font name="System Bold" size="18.0" />
-            </font>
-        </Text>
-        <Text fill="WHITE" layoutX="247.0" layoutY="698.0" strokeType="OUTSIDE" strokeWidth="0.0" text="F2 Game Parameters" underline="true" wrappingWidth="189.13671875">
+        <Text fill="WHITE" layoutX="113.0" layoutY="708.0" strokeType="OUTSIDE" strokeWidth="0.0" text="F5 To Start" underline="true" wrappingWidth="189.13671875">
             <font>
                 <Font name="System Bold" size="18.0" />
             </font>
@@ -50,7 +45,7 @@
                 <Font name="System Bold Italic" size="69.0" />
             </font>
         </Text>
-        <Text fill="WHITE" layoutX="436.0" layoutY="698.0" strokeType="OUTSIDE" strokeWidth="0.0" text="F12 Clear Game" underline="true" wrappingWidth="189.13671875">
+        <Text fill="WHITE" layoutX="231.0" layoutY="707.0" strokeType="OUTSIDE" strokeWidth="0.0" text="F12 Clear Game" underline="true" wrappingWidth="189.13671875">
             <font>
                 <Font name="System Bold" size="18.0" />
             </font>
