--- a/src/main/resources/PlayerEntry.fxml
+++ b/src/main/resources/PlayerEntry.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" style="-fx-background-color: Black;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.teammain.MainController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" style="-fx-background-color: Black;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.teammain.PlayerEntryController">
     <children>
         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#26bc15" height="550.0" layoutX="143.0" layoutY="105.0" stroke="BLACK" strokeType="INSIDE" width="445.0" />
         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ff361f" height="550.0" layoutX="759.0" layoutY="105.0" stroke="BLACK" strokeType="INSIDE" width="445.0" />
