--- a/src/main/resources/PlayerActionDisplay.fxml
+++ b/src/main/resources/PlayerActionDisplay.fxml
@@ -7,20 +7,20 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" style="-fx-background-color: BLACK;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" style="-fx-background-color: BLACK;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.teammain.PlayerActionController">
    <children>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ff361f" height="712.0" layoutX="710.0" layoutY="30.0" stroke="BLACK" strokeType="INSIDE" width="445.0" />
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#26bc15" height="712.0" layoutX="149.0" layoutY="30.0" stroke="BLACK" strokeType="INSIDE" width="445.0" />
       <TableView fx:id="greenTV" layoutX="167.0" layoutY="59.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="275.0" prefWidth="399.0">
         <columns>
           <TableColumn fx:id="greenCodeName" prefWidth="308.5556182861328" text="Green Team" />
-          <TableColumn fx:id="greenScore" minWidth="0.0" prefWidth="89.44439697265625" text="Score" />
+          <TableColumn fx:id="greenS" minWidth="0.0" prefWidth="89.44439697265625" text="Score" />
         </columns>
       </TableView>
       <TableView fx:id="redTV" layoutX="730.0" layoutY="61.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="272.0" prefWidth="403.0">
          <columns>
             <TableColumn fx:id="redCodeName" prefWidth="308.5556182861328" text="Red Team" />
-            <TableColumn fx:id="redScore" minWidth="0.0" prefWidth="89.44439697265625" text="Score" />
+            <TableColumn fx:id="redS" minWidth="0.0" prefWidth="89.44439697265625" text="Score" />
          </columns>
       </TableView>
       <TableView fx:id="currentGameEvents" layoutX="166.0" layoutY="341.0" prefHeight="380.0" prefWidth="966.0">
